--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>WELCOME TO DEVEMPIRE</h1>
-    <p>HERE IN <strong>DEVEMPIRE</strong> YOU'RE ALL EMPERORORS</p>
+    <p>HERE IN <strong>DEVEMPIRE</strong> YOU'RE ALL EMPERORS</p>
     
     <h2>Scan me !</h2>
     <h2>I'm the ViGDi QR CODE</h2>
