--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DevEMIRE</title>
+    <title>DEVEMPIRE</title>
     
     <!-- Favicon à la racine -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
